trunk/cprover/src/json/json_y.output
Grammar

    0 $accept: document $end

    1 document: value

    2 $@1: %empty

    3 object: '{' $@1 '}'

    4 $@2: %empty

    5 object: '{' $@2 key_value_sequence '}'

    6 key_value_sequence: key_value_pair
    7                   | key_value_sequence ',' key_value_pair

    8 $@3: %empty

    9 key_value_pair: TOK_STRING $@3 ':' value

   10 $@4: %empty

   11 array: '[' $@4 ']'

   12 $@5: %empty

   13 array: '[' $@5 array_value_sequence ']'

   14 array_value_sequence: array_value
   15                     | array_value_sequence ',' array_value

   16 array_value: value

   17 value: TOK_STRING
   18      | TOK_NUMBER
   19      | object
   20      | array
   21      | TOK_TRUE
   22      | TOK_FALSE
   23      | TOK_NULL


Terminals, with rules where they appear

$end (0) 0
',' (44) 7 15
':' (58) 9
'[' (91) 11 13
']' (93) 11 13
'{' (123) 3 5
'}' (125) 3 5
error (256)
TOK_STRING (258) 9 17
TOK_NUMBER (259) 18
TOK_TRUE (260) 21
TOK_FALSE (261) 22
TOK_NULL (262) 23


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
document (15)
    on left: 1, on right: 0
object (16)
    on left: 3 5, on right: 19
$@1 (17)
    on left: 2, on right: 3
$@2 (18)
    on left: 4, on right: 5
key_value_sequence (19)
    on left: 6 7, on right: 5 7
key_value_pair (20)
    on left: 9, on right: 6 7
$@3 (21)
    on left: 8, on right: 9
array (22)
    on left: 11 13, on right: 20
$@4 (23)
    on left: 10, on right: 11
$@5 (24)
    on left: 12, on right: 13
array_value_sequence (25)
    on left: 14 15, on right: 13 15
array_value (26)
    on left: 16, on right: 14 15
value (27)
    on left: 17 18 19 20 21 22 23, on right: 1 9 16


State 0

    0 $accept: . document $end

    TOK_STRING  shift, and go to state 1
    TOK_NUMBER  shift, and go to state 2
    TOK_TRUE    shift, and go to state 3
    TOK_FALSE   shift, and go to state 4
    TOK_NULL    shift, and go to state 5
    '{'         shift, and go to state 6
    '['         shift, and go to state 7

    document  go to state 8
    object    go to state 9
    array     go to state 10
    value     go to state 11


State 1

   17 value: TOK_STRING .

    $default  reduce using rule 17 (value)


State 2

   18 value: TOK_NUMBER .

    $default  reduce using rule 18 (value)


State 3

   21 value: TOK_TRUE .

    $default  reduce using rule 21 (value)


State 4

   22 value: TOK_FALSE .

    $default  reduce using rule 22 (value)


State 5

   23 value: TOK_NULL .

    $default  reduce using rule 23 (value)


State 6

    3 object: '{' . $@1 '}'
    5       | '{' . $@2 key_value_sequence '}'

    TOK_STRING  reduce using rule 4 ($@2)
    $default    reduce using rule 2 ($@1)

    $@1  go to state 12
    $@2  go to state 13


State 7

   11 array: '[' . $@4 ']'
   13      | '[' . $@5 array_value_sequence ']'

    ']'       reduce using rule 10 ($@4)
    $default  reduce using rule 12 ($@5)

    $@4  go to state 14
    $@5  go to state 15


State 8

    0 $accept: document . $end

    $end  shift, and go to state 16


State 9

   19 value: object .

    $default  reduce using rule 19 (value)


State 10

   20 value: array .

    $default  reduce using rule 20 (value)


State 11

    1 document: value .

    $default  reduce using rule 1 (document)


State 12

    3 object: '{' $@1 . '}'

    '}'  shift, and go to state 17


State 13

    5 object: '{' $@2 . key_value_sequence '}'

    TOK_STRING  shift, and go to state 18

    key_value_sequence  go to state 19
    key_value_pair      go to state 20


State 14

   11 array: '[' $@4 . ']'

    ']'  shift, and go to state 21


State 15

   13 array: '[' $@5 . array_value_sequence ']'

    TOK_STRING  shift, and go to state 1
    TOK_NUMBER  shift, and go to state 2
    TOK_TRUE    shift, and go to state 3
    TOK_FALSE   shift, and go to state 4
    TOK_NULL    shift, and go to state 5
    '{'         shift, and go to state 6
    '['         shift, and go to state 7

    object                go to state 9
    array                 go to state 10
    array_value_sequence  go to state 22
    array_value           go to state 23
    value                 go to state 24


State 16

    0 $accept: document $end .

    $default  accept


State 17

    3 object: '{' $@1 '}' .

    $default  reduce using rule 3 (object)


State 18

    9 key_value_pair: TOK_STRING . $@3 ':' value

    $default  reduce using rule 8 ($@3)

    $@3  go to state 25


State 19

    5 object: '{' $@2 key_value_sequence . '}'
    7 key_value_sequence: key_value_sequence . ',' key_value_pair

    '}'  shift, and go to state 26
    ','  shift, and go to state 27


State 20

    6 key_value_sequence: key_value_pair .

    $default  reduce using rule 6 (key_value_sequence)


State 21

   11 array: '[' $@4 ']' .

    $default  reduce using rule 11 (array)


State 22

   13 array: '[' $@5 array_value_sequence . ']'
   15 array_value_sequence: array_value_sequence . ',' array_value

    ','  shift, and go to state 28
    ']'  shift, and go to state 29


State 23

   14 array_value_sequence: array_value .

    $default  reduce using rule 14 (array_value_sequence)


State 24

   16 array_value: value .

    $default  reduce using rule 16 (array_value)


State 25

    9 key_value_pair: TOK_STRING $@3 . ':' value

    ':'  shift, and go to state 30


State 26

    5 object: '{' $@2 key_value_sequence '}' .

    $default  reduce using rule 5 (object)


State 27

    7 key_value_sequence: key_value_sequence ',' . key_value_pair

    TOK_STRING  shift, and go to state 18

    key_value_pair  go to state 31


State 28

   15 array_value_sequence: array_value_sequence ',' . array_value

    TOK_STRING  shift, and go to state 1
    TOK_NUMBER  shift, and go to state 2
    TOK_TRUE    shift, and go to state 3
    TOK_FALSE   shift, and go to state 4
    TOK_NULL    shift, and go to state 5
    '{'         shift, and go to state 6
    '['         shift, and go to state 7

    object       go to state 9
    array        go to state 10
    array_value  go to state 32
    value        go to state 24


State 29

   13 array: '[' $@5 array_value_sequence ']' .

    $default  reduce using rule 13 (array)


State 30

    9 key_value_pair: TOK_STRING $@3 ':' . value

    TOK_STRING  shift, and go to state 1
    TOK_NUMBER  shift, and go to state 2
    TOK_TRUE    shift, and go to state 3
    TOK_FALSE   shift, and go to state 4
    TOK_NULL    shift, and go to state 5
    '{'         shift, and go to state 6
    '['         shift, and go to state 7

    object  go to state 9
    array   go to state 10
    value   go to state 33


State 31

    7 key_value_sequence: key_value_sequence ',' key_value_pair .

    $default  reduce using rule 7 (key_value_sequence)


State 32

   15 array_value_sequence: array_value_sequence ',' array_value .

    $default  reduce using rule 15 (array_value_sequence)


State 33

    9 key_value_pair: TOK_STRING $@3 ':' value .

    $default  reduce using rule 9 (key_value_pair)
